# tapl

./: tapl.cabal
src/: AST.hs  Eval.hs  Lexer.hs  Main.hs  Parser.hs  README  TypeChecker.hs  Util.hs  test.input
src/arith/: Core.hs  Lexer.hs  Main.hs  Parser.hs  README  Syntax.hs
src/simply_typed_lambda_calculus/: AST.hs  Eval.hs  Main.hs  Parser.hs  README  TypeChecker.hs  ruby.rb  test.input
src/untyped_lambda_calculus/: AST.hs  Eval.hs  Lexer.hs  Main.hs  Parser.hs  README  test.input
